--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vibe-sync",
-  "version": "1.0.0",
+  "name": "vibe-config-sync",
+  "version": "0.0.1",
   "description": "Cross-platform CLI tool to sync AI coding tool configurations across machines via git",
   "type": "module",
   "bin": {
